# podo-farm

./: .gitignore  Cargo.toml
.omc/: project-memory.json
.omc/sessions/: 005d49e0-9e2f-4b5c-88e3-eb799f055e76.json
.omc/state/: hud-state.json  hud-stdin-cache.json  idle-notif-cooldown.json
src/: main.rs
web/: farm-game.d.ts  farm-game.js  farm-game_bg.wasm.d.ts  index.html
